[package]
name = "dockertest"
version = "0.3.1"
authors = ["Vegard Sandengen <vegard@orcalabs.no>", "Jon Foss Mikalsen <jon@orcalabs.no>"]
edition = "2018"
license = "MIT"
description = "A library to control docker containers when running your integration tests."
homepage = "https://www.orcalabs.no"
repository = "https://gitlab.com/orcalabs/public/dockertest-rs"
keywords = ["docker", "integration", "test", "container"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/dockertest"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
base64 = "0.13.0"
bollard = "0.13.0"
dyn-clone = "1.0.6"
futures = "0.3.21"
lazy_static = "1.4.0"
secrecy = "0.8.0"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
rand = "0.8.5"

[dev-dependencies]
access-queue = "1.1.0"
once_cell = "1.12.0"
test-log = { version = "0.2.10", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["env-filter", "fmt"] }

[build-dependencies]
anyhow = "1.0.58"

[features]
tls = ["bollard/ssl"]
