[package]
name = "dockertest"
version = "0.4.0"
authors = ["Vegard Sandengen <vegard@orcalabs.no>", "Jon Foss Mikalsen <jon@orcalabs.no>"]
edition = "2018"
license = "MIT"
description = "A library to control docker containers when running your integration tests."
homepage = "https://www.orcalabs.no"
repository = "https://github.com/orcalabs/dockertest-rs"
keywords = ["docker", "integration", "test", "container"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/dockertest"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
base64 = "0.21.2"
bollard = "0.15.0"
dyn-clone = "1.0.12"
futures = "0.3.28"
lazy_static = "1.4.0"
secrecy = "0.8.0"
serde = "1.0.180"
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
rand = "0.8.5"

[dev-dependencies]
access-queue = "1.1.0"
once_cell = "1.18.0"
test-log = { version = "0.2.12", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }

[build-dependencies]
anyhow = "1.0.72"

[features]
tls = ["bollard/ssl"]
