[package]
name = "dockertest"
version = "0.5.0"
authors = [
    "Vegard Sandengen <vegard@orcalabs.no>",
    "Jon Foss Mikalsen <jon@orcalabs.no>",
]
edition = "2018"
license = "MIT"
description = "A library to control docker containers when running your integration tests."
homepage = "https://www.orcalabs.no"
repository = "https://github.com/orcalabs/dockertest-rs"
keywords = ["docker", "integration", "test", "container"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/dockertest"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
base64 = "0.22.1"
bollard = "0.17.1"
dyn-clone = "1.0.17"
futures = "0.3.30"
secrecy = "0.8.0"
serde = "1.0.208"
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
rand = "0.8.5"
bytes = "1.7.1"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
access-queue = "1.1.0"
once_cell = "1.19.0"
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "env-filter",
    "fmt",
] }

[build-dependencies]
anyhow = "1.0.86"

[features]
tls = ["bollard/ssl"]
